Watch History Suppression for users
